--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -97,6 +97,10 @@
   box-sizing: border-box;
 }
 
+[hidden] {
+  display: none !important;
+}
+
 html {
   scroll-behavior: smooth;
   background: var(--color-bg);
